--- a/src/components/atom/Image.astro
+++ b/src/components/atom/Image.astro
@@ -25,6 +25,8 @@ const { contentVisibility, src, alt, display = 'block', cover = false, lazyLoadi
 <style lang="scss">
 img {
     display: block;
+    width: 100%;
+    height: 100%;
 
     &.visibility {
         content-visibility: auto;
