--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -17,7 +17,7 @@ const linksSecondColumn = [
 
 const subLinks = [
     {name: 'Plan du site', link: '#'},
-    {name: 'Mentions légales', link: '#'},
+    {name: 'Mentions légales', link: '/legals'},
     {name: 'Crédits', link: '#'},
 ]
 ---
