--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -156,7 +156,7 @@ import H1 from '../components/H1.astro';
                             <p class="text-sm font-semibold tracking-2">07 88 28 10 89</p>
                         </li>
                         <li class="flex items-center gap-4 py-1 cursor-pointer duration-300 font-medium hover:opacity-50">
-                            <a class="flex items-center gap-4" href="https://www.google.fr/maps/place/64200+Biarritz/@43.4709891,-1.57639,14z/data=!3m1!4b1!4m6!3m5!1s0xd51152b0af31e33:0x40665174813a830!8m2!3d43.4831519!4d-1.558626!16zL20vMDFoM3Rs?entry=ttu" target="_blank">
+                            <a class="flex items-center gap-4" href="https://www.google.fr/maps/place/57+Av.+du+Mar%C3%A9chal+Juin,+64200+Biarritz/@43.470901,-1.5429779,17z/data=!3m1!4b1!4m6!3m5!1s0xd51153581b41ef9:0xf7cc06159a644b4!8m2!3d43.4708971!4d-1.540403!16s%2Fg%2F11bw44dfs2?entry=ttu" target="_blank">
                                 <div class="w-[30px]">
                                     <Image 
                                         src="/img/icons/location.svg" 
@@ -164,7 +164,7 @@ import H1 from '../components/H1.astro';
                                         fetchPriority={true}
                                     />
                                 </div>
-                                <p class="text-sm font-semibold tracking-2">57 avenue du General Juin <br> 64500 Biarritz</p>
+                                <p class="text-sm font-semibold tracking-2">57 Avenue du Maréchal Juin<br> 64500 Biarritz</p>
                             </a>
                         </li>
                     </ul>
