--- a/src/pages/legals.astro
+++ b/src/pages/legals.astro
@@ -26,7 +26,7 @@ import H1 from '../components/H1.astro';
             <div class="link-svg ">
                 <div class="absolute -top-11 -right-[17px]">
                     <Image 
-                        src="/img/logo/head.svg" 
+                        src="/img/icons/legals.svg" 
                         alt="Head icon"
                         fetchPriority={true}
                     />
@@ -44,11 +44,11 @@ import H1 from '../components/H1.astro';
 
 
     <Section>
-        <div class="max-w-4xl ml-15">
+        <div class="lg:max-w-4xl lg:ml-15">
            
             <h2>Mentions légales</h2>
 
-            <h2>ÉDITEUR DU SITE</h2>
+            <h2 class="text-purple font-bold">ÉDITEUR DU SITE</h2>
             <p>
                 PREEZO.fr est édité par <b>PREEZEO</b>, SASU au capital de 7500 €.
                 <br>Numéro de RCS : 000 000 000 - Numéro de TVA : FR0000000000
@@ -58,11 +58,11 @@ import H1 from '../components/H1.astro';
                 <br>preezeo.fr est hébergé par OVH.
             <p>
 
-            <h2>DONNÉES PERSONNELLES & CONFIDENTIALITÉ</h2>
+            <h2 class="text-purple font-bold">DONNÉES PERSONNELLES & CONFIDENTIALITÉ</h2>
             <p>Le site ne recueille aucunes informations personnelles, et n’est pas assujetti à déclaration à la CNIL.</p>
             
 
-            <h2>INFORMATIONS</h2>
+            <h2 class="text-purple font-bold">INFORMATIONS</h2>
             <p>
                 Les informations et documents du site sont présentés à titre indicatif, sans caractère exhaustif, 
                 et ne peuvent engager la responsabilité du propriétaire du site.
@@ -71,7 +71,7 @@ import H1 from '../components/H1.astro';
             </p>
             
 
-            <h2>PROPRIETE INTELLECTUELLE</h2>
+            <h2 class="text-purple font-bold">PROPRIETE INTELLECTUELLE</h2>
             <p>
                 Sauf mention contraire, tous les éléments accessibles sur le site 
                 (textes, images, graphismes, logo, icônes, sons, logiciels, etc.) 
@@ -84,7 +84,7 @@ import H1 from '../components/H1.astro';
                 <br>Les marques et logos reproduits sur le site sont déposés par les sociétés qui en sont propriétaires.
             </p>
         
-            <h2>CRÉDITS</h2>
+            <h2 class="text-purple font-bold">CRÉDITS</h2>
             <p>Design & Développement: <a href="https://touch-of-pixels.com" class="link-effect">Touch of Pixels</a></p>
             
         </div>
