--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ const { title } = Astro.props;
 	</head>
 	<body class="flex flex-col bg-light font-montserrat text-base leading-[140%]">
 		<Header />	
-		<main class="wrapper"  transition:animate="initial">
+		<main class="wrapper"  transition:animate="fade">
 			<slot />
 		</main>
 		<div class="bg-container">
