--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -77,7 +77,11 @@ const { title } = Astro.props;
 	// 		font-size: 100%;
 	// 	}
 	// }
+	
+	* {
+		background-color: red;
 
+	}
 	body {
 		min-height: 100vh;
 		min-height: 100dvh;
