--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -23,7 +23,7 @@ const {c, border, title, icon, number, color, isSmall, shadow, stepDisplay} = As
 	isSmall ? 'max-w-[350px] lg:max-w-[300px]' : '', 
 	shadow ? 'shadow-cardHomepage' : '', 
 	color === 'dark' ? 'bg-deep-blue' :'bg-light-purple', 
-	'flex flex-1 gap-3 items-center relative flex-col rounded-lg px-8 pt-4 lg:px-4 lg:pt-4'
+	'flex flex-1 gap-3 items-center relative flex-col rounded-lg lg:px-8 lg:pt-4 px-4 pt-4'
 	]}
 >
 	{icon &&
