--- a/src/components/cardSelect.astro
+++ b/src/components/cardSelect.astro
@@ -3,6 +3,7 @@ export interface Props {
 	items: Array<{	
 		text: string,
 		icon: string,
+		value: string,
 	}>
 }
 
@@ -10,7 +11,10 @@ const {items} = Astro.props;
 ---
 
 {items.map((item) => (
-	<article class="card-select flex flex-1 gap-3 items-center relative flex-col rounded-lg bg-t border-2 border-dashed border-purple cursor-pointer">
+	<article 
+		class="card-select flex flex-1 gap-3 items-center relative flex-col rounded-lg bg-t border-2 border-dashed border-purple cursor-pointer"
+		data-value={item.value}
+		>
 		<img 
 			src={item.icon}
 			alt=""
@@ -18,7 +22,7 @@ const {items} = Astro.props;
 			loading="lazy"
 			draggable="false"
 			decoding="async"
-		>
+		/>
 		<h3>{ item.text }</h3>
 	</article>
 ))}
@@ -31,6 +35,11 @@ article {
 	padding: 50px 30px;
 	cursor: pointer;
 	transition: .2s ease-in-out;
+	@media (max-width: 480px) {
+		padding: 0;
+		aspect-ratio: 1;
+		justify-content: center;
+	}
 
 	&:hover {
 		border-style: solid;
