--- a/src/pages/particuliers.astro
+++ b/src/pages/particuliers.astro
@@ -7,8 +7,9 @@ import Section from '../components/Section.astro';
 import Card from '../components/Card.astro';
 import ButtonContact from '../components/ButtonContact.astro';
 import Image from '../components/atom/Image.astro';
-import Button from '../components/atom/Button.astro';
+import CardSelect from '../components/cardSelect.astro';
 import H1 from '../components/H1.astro';
+import Dropdown from '../components/dropdown.vue';
 
 
 const cards = [
@@ -25,20 +26,22 @@ const cards = [
 
 
 const cardSelect = [
-    {text: 'Une maison', icon: '/img/icons/flat_house.svg'},
-    {text: 'Un appartement', icon: '/img/icons/flat_appartement.svg'},
+    {text: 'Une maison', icon: '/img/icons/flat_house.svg', value:'house'},
+    {text: 'Un appartement', icon: '/img/icons/flat_appartement.svg', value:'appartement'},
 ]
 ---
 <script>
     const cardSelect = [...document.querySelectorAll('.card-select')]
-    let activeCardName = 'Une Maison'
+    const viewsWrapper = document.querySelector('.views-wrapper')
+    let activeCard = 'house'
     cardSelect[0]?.classList.add('active')
     cardSelect.forEach(item => {
         item.addEventListener('click', (e) => {
             const target = e.target as Element
             cardSelect.forEach(item => item.classList.remove('active'))
             target.classList.add('active')
-            activeCardName = target.textContent
+            activeCard = target.getAttribute('data-value')
+            viewsWrapper.setAttribute('data-active', activeCard)
         })
     })
 </script>
@@ -49,96 +52,118 @@ const cardSelect = [
         <Headline />
     </section>
 
-    <Section c="relative mt-20 ml-20">
+    <Section c="relative mt-20 xl:ml-20">
         <H1 text="pour particuliers" />
-        <div class="flex gap-10 justify-between">
+        <div class="flex flex-col lg:flex-row gap-10 justify-between">
             <div class="link-svg">
-                <div class="absolute -top-9 -right-3">
+                <div class="absolute sm:-top-9 sm:-right-3 top-15 right-9 lg:max-w-[45px]">
                     <Image 
                         src="/img/icons/house.svg" 
                         alt="House icon"
                         fetchPriority={true}
                     />
                 </div>
-                <svg width="377" height="99" viewBox="0 0 377 99" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="345.023" y="43" width="22.698" height="4.91639" rx="2.45819" fill="#FFB800"/>
-                    <rect x="335" y="55.8477" width="41.5086" height="4.941" rx="2.4705" fill="#FFB800"/>
-                    <path d="M356 96.0117V53.9998" stroke="#FFB800" stroke-width="5" stroke-linecap="round"/>
-                    <line x1="355.507" y1="96.0035" x2="2.50349" y2="96.4965" stroke="#FFB800" stroke-width="5" stroke-linecap="round"/>
-                    <path d="M5 3C5 1.61929 3.88071 0.5 2.5 0.5C1.11929 0.5 0 1.61929 0 3H5ZM5 96L5 3H0L0 96H5Z" fill="#FFB800"/>
-                </svg>
+
+                <div class="block sm:hidden sm:translate-x-0 sm:translate-y-0 translate-x-10 translate-y-2">
+                    <svg width="223" height="66" viewBox="0 0 223 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="208.027" y="35.5059" width="10.1989" height="1.82688" fill="#FFB800"/>
+                        <rect x="203.973" y="40.2793" width="18.6511" height="1.83603" fill="#FFB800"/>
+                        <line x1="213.185" y1="64.1172" x2="213.185" y2="41.8218" stroke="#FFB800" stroke-width="2.24666"/>
+                        <path d="M0 63.8789H214.3" stroke="#FFB800" stroke-width="2.24666"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2.50447 15.6418V0.388672H0.257812V15.9441H0.258374V17.8885H9.23587L0.330429 43.5562H0.260046V63.3894H2.5067V44.132L11.6119 17.8885H18.2316V15.6418H12.3914L13.9842 11.0508L11.7997 10.499L10.0154 15.6418H2.50447Z" fill="#FFB800"/>
+                    </svg>
+                </div>
+                <div class="hidden sm:block">
+                    <svg width="377" height="99" viewBox="0 0 377 99" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="345.023" y="43" width="22.698" height="4.91639" rx="2.45819" fill="#FFB800"/>
+                        <rect x="335" y="55.8477" width="41.5086" height="4.941" rx="2.4705" fill="#FFB800"/>
+                        <path d="M356 96.0117V53.9998" stroke="#FFB800" stroke-width="5" stroke-linecap="round"/>
+                        <line x1="355.507" y1="96.0035" x2="2.50349" y2="96.4965" stroke="#FFB800" stroke-width="5" stroke-linecap="round"/>
+                        <path d="M5 3C5 1.61929 3.88071 0.5 2.5 0.5C1.11929 0.5 0 1.61929 0 3H5ZM5 96L5 3H0L0 96H5Z" fill="#FFB800"/>
+                    </svg>
+                </div>
             </div>
 
             <div class="flex flex-col gap-6 lg:-translate-y-1/2">
-
                 <p class="font-bold">J'habite dans :</p>
-
-                <div class="flex gap-6 items-stretch">
-                  
+                <div class="grid grid-cols-2 gap-4 md:gap-6 items-stretch">
+                    <CardSelect items={cardSelect} />
                 </div>
             </div>
         </div>
     </Section>
 
-    <Section flex={true}>
-        <Tips
-            title="Le crédit d'impôts"
-        >
-            <p 
-                slot="text"
-                class="inline gap-1"
-            >
-                <span class="font-medium text-[19px] tracking-3 leading-[142%]">
-                    <span class="text-purple">Le crédit d’impôts</span> pour la transition énergétique permet aux propriétaires et locataires d’une <span class="text-purple">résidence principale</span> de déduire jusqu’à <span class="text-purple">300 euros</span> des dépenses liées à l’acquisition d’une borne de recharge pour véhicules électriques installée à domicile.
-                </span>
-            </p>
-        </Tips>
-    </Section>
 
-    <Section smallBottomMargin={true}>
-        <div class="flex flex-col gap-2 mb-10 ml-20">
-            <h2 class="text-base font-bold">Vous habitez une maison individuelle</h2>
-            <span class="bg-purple h-[4px] w-[200px] block"></span>
-        </div>
-        <div class="grid grid-cols-3 gap-4 max-w-[880px] mx-auto">
-            {cards.map((item) => (
-                <div class="flex items-center justify-center ">
-                    <Card 
-                        color="light"
-                        shadow={true}
-                        border={true}
-                    >  
-                        <div slot="content" class="flex flex-col align-center justify-center gap-2 h-[160px] px-4">
-                            <h3 class="font-montserrat font-bold text-sm text-center" set:html={item.html}></h3>
-                        </div>
-                    </Card>
+    <div class="views-wrapper" data-active="house">
+        <div class="house-view">
+            <Section flex={true}>
+                <Tips
+                    title="Le crédit d'impôts"
+                >
+                    <p 
+                        slot="text"
+                        class="inline gap-1"
+                    >
+                        <span class="font-medium text-[19px] tracking-3 leading-[142%]">
+                            <span class="text-purple">Le crédit d’impôts</span> pour la transition énergétique permet aux propriétaires et locataires d’une <span class="text-purple">résidence principale</span> de déduire jusqu’à <span class="text-purple">300 euros</span> des dépenses liées à l’acquisition d’une borne de recharge pour véhicules électriques installée à domicile.
+                        </span>
+                    </p>
+                </Tips>
+            </Section>
+        
+            <Section smallBottomMargin={true}>
+                <div class="flex flex-col gap-2 mb-10 lg:ml-20">
+                    <h2 class="text-base font-bold">Vous habitez une maison individuelle</h2>
+                    <span class="bg-purple h-[4px] w-[200px] block"></span>
                 </div>
-            ))}
+                <div class=`lg:grid lg:grid-cols-3 gap-4 max-w-[880px] mx-auto flex overflow-x-scroll scrollbar-hide w-[100vw] -translate-x-[5vw] snap-x snap-mandatory px-10`>
+                    {cards.map((item) => (
+                        <div class="flex items-center justify-center snap-center">
+                            <Card 
+                                color="light"
+                                shadow={true}
+                                border={true}
+                            >  
+                                <div slot="content" class="flex flex-col align-center justify-center gap-2 h-[160px] min-w-[160px]">
+                                    <h3 class="font-montserrat font-bold text-sm text-center" set:html={item.html}></h3>
+                                </div>
+                            </Card>
+                        </div>
+                    ))}
+                </div>
+            </Section>
+        
+            <Section flex={true} smallBottomMargin={true}>
+                <ButtonContact />
+            </Section>
+        
+            <Section flex={true}>
+                <Tips
+                    title="Combien coûte la recharge en maison individuelle ?"
+                    isBig={true}
+                >
+                    <p 
+                        slot="text"
+                        class="inline gap-1"
+                    >
+                        <span class="font-medium text-[19px] tracking-3 leading-[142%]">
+                            En moyenne et sur une base de la tarification réglementée de vente (TRV), le coût d’une recharge en heures creuses pour <span class="text-purple">100 km d’autonomie (consommation de 15kWh/100km) est d’environ 2 euros et 3 euros en heures pleines.</span>
+                            <br>
+                            Plus la puissance est importante, moins long sera le temps de recharge. Cela dépend aussi de votre chargeur embarqué dans votre véhicule électrique. 
+                            Rendez-vous sur la page <a href="/informations" class="link-effect">informations utiles</a> pour en savoir plus.
+                        </span>
+                    </p>
+                </Tips>
+            </Section>
         </div>
-    </Section>
 
-    <Section flex={true} smallBottomMargin={true}>
-        <ButtonContact />
-    </Section>
+        <div class="appartement-view">
+            <p>Appartement section, <b>Work in progress</b></p>
+        </div>
+    </div>
 
-    <Section flex={true}>
-        <Tips
-            title="Combien coûte la recharge en maison individuelle ?"
-            isBig={true}
-        >
-            <p 
-                slot="text"
-                class="inline gap-1"
-            >
-                <span class="font-medium text-[19px] tracking-3 leading-[142%]">
-                    En moyenne et sur une base de la tarification réglementée de vente (TRV), le coût d’une recharge en heures creuses pour <span class="text-purple">100 km d’autonomie (consommation de 15kWh/100km) est d’environ 2 euros et 3 euros en heures pleines.</span>
-                    <br>
-                    Plus la puissance est importante, moins long sera le temps de recharge. Cela dépend aussi de votre chargeur embarqué dans votre véhicule électrique. 
-                    Rendez-vous sur la page <a href="/informations" class="link-effect">informations utiles</a> pour en savoir plus.
-                </span>
-            </p>
-        </Tips>
-    </Section>
+
+
 
     <Section flex={true} smallBottomMargin={true}>
         <ProjectStripe />
@@ -154,7 +179,23 @@ const cardSelect = [
     // position: absolute;
     width: max-content;
     max-width: unset;
-    translate: 85px 20px;
+    
+    @media screen and (min-width: 480px) {
+        translate: 85px 20px;
+    }
 }
+
+.views-wrapper {
+    .house-view, .appartement-view {
+        display: none;
+    }
+    &[data-active="house"] .house-view {
+        display: block;
+    }
+    &[data-active="appartement"] .appartement-view {
+        display: block;
+    }
+}
+
 
 </style>
