--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,11 +46,13 @@ const defaultCards = [
             </svg>
             <div class="flex gap-20 text-center items-end justify-end absolute bottom-[32px] right-8">
                 <a href="/particuliers" class="flex flex-col gap-2 items-center justify-center">
-                    <Image 
-                        src="/img/icons/house.svg" 
-                        alt="House icon"
-                        fetchPriority={true}
-                    />
+                    <div>
+                        <Image 
+                            src="/img/icons/house.svg" 
+                            alt="House icon"
+                            fetchPriority={true}
+                        />
+                    </div>
                     <h3 class="font-semibold tracking-3 text-sm font-montserrat">Particulier</h3>
                     <svg width="54" height="102" viewBox="0 0 54 102" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <line x1="26.8618" y1="101.083" x2="26.8618" y2="46.9998" stroke="#FFB800" stroke-width="4.50693"/>
@@ -74,11 +76,13 @@ const defaultCards = [
                 </a>
 
                 <a href="/infrastructures" class="flex flex-col gap-2 items-center justify-center">
-                    <Image 
-                        src="/img/icons/apartement.svg" 
-                        alt="Apartements icon"
-                        fetchPriority={true}
-                    />
+                    <div>
+                        <Image 
+                            src="/img/icons/apartement.svg" 
+                            alt="Apartements icon"
+                            fetchPriority={true}
+                        />
+                    </div>
                     <h3 class="font-semibold tracking-3 text-sm font-montserrat">Infrastructure collective</h3>
                     <svg width="54" height="195" viewBox="0 0 54 195" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <line y1="-2.25347" x2="146.942" y2="-2.25347" transform="matrix(-6.61363e-05 -1 1 -5.70256e-05 29.1797 194.942)" stroke="#FFB800" stroke-width="4.50693"/>
@@ -87,11 +91,13 @@ const defaultCards = [
                     </svg>
                 </a>
                 <a href="/professionnels" class="flex flex-col gap-2 items-center justify-center">
-                    <Image 
-                        src="/img/icons/building.svg" 
-                        alt="Building icon"
-                        fetchPriority={true}
-                    />
+                    <div>
+                        <Image 
+                            src="/img/icons/building.svg" 
+                            alt="Building icon"
+                            fetchPriority={true}
+                        />
+                    </div>
                     <h3 class="font-semibold tracking-3 text-sm font-montserrat">Professionnel</h3>
                     <svg width="55" height="258" viewBox="0 0 55 258" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <line x1="28.2758" y1="257.352" x2="28.2758" y2="49.1312" stroke="#FFB800" stroke-width="4.50693"/>
