--- a/src/pages/particuliers.astro
+++ b/src/pages/particuliers.astro
@@ -56,7 +56,7 @@ const cardSelect = [
         <H1 text="pour particuliers" />
         <div class="flex flex-col lg:flex-row gap-10 justify-between">
             <div class="link-svg">
-                <div class="absolute sm:-top-9 sm:-right-3 top-15 right-9 lg:max-w-[45px]">
+                <div class="absolute sm:-top-9 sm:-right-3 top-15 right-9 lg:-right-3 lg:max-w-[70px]">
                     <Image 
                         src="/img/icons/house.svg" 
                         alt="House icon"
